Fix z-index of drop down region menu.

--- a/histomicsui/web_client/stylesheets/layout/layout.styl
+++ b/histomicsui/web_client/stylesheets/layout/layout.styl
@@ -104,3 +104,6 @@ body.hui-body[view-mode="dark"]
 
       &:focus, &:hover
         background-color #4672cc
+
+  .region-downdown
+    z-index 100
